--- a/templates/service.yml.j2
+++ b/templates/service.yml.j2
@@ -12,6 +12,7 @@ log:
   sizeThreshold: {{ winsw_service_log_size | mandatory }}
   autoRollAtTime: '{{ winsw_service_log_roll_at | mandatory }}'
   keepFiles: {{ winsw_service_log_keep | mandatory }}
+{% endif %}
 {% if winsw_service_logon_enabled %}
 serviceaccount:
   domain: '{{ winsw_service_logon_domain | mandatory }}'
