fix arguments indentation and definition file extension
Signed-off-by: Jakub Sokołowski <jakub@status.im>

--- a/templates/service.yml.j2
+++ b/templates/service.yml.j2
@@ -27,6 +27,4 @@ env:
 workingdirectory: '{{ winsw_service_work_dir | mandatory }}'
 executable: '{{ winsw_service_exe_path | mandatory }}'
 arguments: >
-{% for arg in winsw_service_arguments %}
-  {{ arg | mandatory }}
-{% endfor %}
+  {{ winsw_service_arguments | indent( width=2) }}
