fix service tempalte to use serviceAccount
See:
https://github.com/winsw/winsw/blob/v2.11.0/doc/yamlConfigurationSchema.json

Signed-off-by: Jakub Sokołowski <jakub@status.im>

--- a/templates/service.yml.j2
+++ b/templates/service.yml.j2
@@ -14,7 +14,7 @@ log:
   keepFiles: {{ winsw_service_log_keep | mandatory }}
 {% endif %}
 {% if winsw_service_logon_enabled %}
-serviceaccount:
+serviceAccount:
   domain: '{{ winsw_service_logon_domain | mandatory }}'
   user: '{{ winsw_service_user | mandatory }}'
   password: '{{ winsw_service_logon_pass | mandatory }}'
