--- a/templates/service.yml.j2
+++ b/templates/service.yml.j2
@@ -7,7 +7,7 @@ priority: '{{ winsw_service_priority | mandatory }}'
 {% if winsw_service_log_mode != 'append' %}
 log:
   mode: '{{ winsw_service_log_mode | mandatory }}'
-  logpath: '%BASE/log%'
+  logpath: '{{ winsw_service_logs_dir | mandatory }}'
   pattern: '{{ winsw_service_log_pattern | mandatory }}'
   sizeThreshold: {{ winsw_service_log_size | mandatory }}
   autoRollAtTime: '{{ winsw_service_log_roll_at | mandatory }}'
