readme: add info about issue with allowservicelogon
https://github.com/winsw/winsw/issues/840

Signed-off-by: Jakub Sokołowski <jakub@status.im>

--- a/templates/service.yml.j2
+++ b/templates/service.yml.j2
@@ -18,6 +18,7 @@ serviceAccount:
   domain: '{{ winsw_service_logon_domain | mandatory }}'
   user: '{{ winsw_service_user | mandatory }}'
   password: '{{ winsw_service_logon_pass | mandatory }}'
+  # WARNING: Does not work, requires manual intervention.
   allowservicelogon: true
 env:
 {% endif %}
