default to restarting service on failure
https://github.com/winsw/winsw/blob/v2.11.0/doc/yamlConfigFile.md#onfailure

Signed-off-by: Jakub Sokołowski <jakub@status.im>

--- a/templates/service.yml.j2
+++ b/templates/service.yml.j2
@@ -4,6 +4,8 @@ name: '{{ winsw_service_name | mandatory }}'
 description: '{{ winsw_service_description | mandatory }}'
 stoptimeout: {{ winsw_service_stop_timeout | mandatory }}
 priority: '{{ winsw_service_priority | mandatory }}'
+onFailure:
+  - action: {{ winsw_service_on_failure }}
 {% if winsw_service_log_mode != 'append' %}
 log:
   mode: '{{ winsw_service_log_mode | mandatory }}'
