--- a/templates/service.yml.j2
+++ b/templates/service.yml.j2
@@ -10,10 +10,12 @@ onFailure:
 log:
   mode: '{{ winsw_service_log_mode | mandatory }}'
   logpath: '{{ winsw_service_logs_dir | mandatory }}'
-  pattern: '{{ winsw_service_log_pattern | mandatory }}'
   sizeThreshold: {{ winsw_service_log_size | mandatory }}
-  autoRollAtTime: '{{ winsw_service_log_roll_at | mandatory }}'
   keepFiles: {{ winsw_service_log_keep | mandatory }}
+{% if winsw_service_log_mode == 'roll-by-size-time' %}
+  pattern: '{{ winsw_service_log_pattern | mandatory }}'
+  autoRollAtTime: '{{ winsw_service_log_roll_at | mandatory }}'
+{% endif %}
 {% endif %}
 {% if winsw_service_logon_enabled %}
 serviceAccount:
