add ability to disable stdout/stderr log files
Signed-off-by: Jakub Sokołowski <jakub@status.im>

--- a/templates/service.yml.j2
+++ b/templates/service.yml.j2
@@ -16,6 +16,12 @@ log:
   pattern: '{{ winsw_service_log_pattern | mandatory }}'
   autoRollAtTime: '{{ winsw_service_log_roll_at | mandatory }}'
 {% endif %}
+{% if winsw_service_log_stdout_disabled %}
+  outfiledisabled: true
+{% endif %}
+{% if winsw_service_log_stderr_disabled %}
+  errFileDisabled: true
+{% endif %}
 {% endif %}
 {% if winsw_service_logon_enabled %}
 serviceAccount:
